Prevent horizontal scroll on browsers with scrollbars, re-autoprefix

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -543,7 +543,7 @@ button,
 
 // Full width container (fw-container)
 .c-l-fw-container {
-  width: 100vw;
+  width: 100%;
   position: relative;
 }
 
